<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_search">Search</string>
    <string name="hint_enter_search_term">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="label_site">Site</string>
    <string name="label_size">Size</string>
    <string name="lable_type">Type</string>
    <string name="label_color">Color</string>
    <string name="label_save">Save</string>
    <string name="hint_enter_site_url">Enter Site URL</string>
    <string name="search_title">Search Images</string>
    <string name="search_hint">Search Images</string>
    

    <string-array name="image_sizes">
        <item>all</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

     <string-array name="image_colors">
        <item>all</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
     
    <string-array name="image_types">
        <item>all</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
